# audio_vis

./: .gitignore  CMakeLists.txt  analysis.h  audio.h  audio_capture.cpp  audio_capture.h  audio_spec.h  audio_vis  av_bridge.h  fft.h  float_holds.h  hold_value.h  main.cpp  notes.txt  oldTestMain.txt  peak_rms.h  render_bridge.h  ring_buffer.h  sesh2  shader.h  smooth_value.h
.cache/clangd/index/: analysis.h.73E5B276A4623F48.idx  audio.h.6C1F101BE5523368.idx  audio_capture.h.656FD2A93BB3E500.idx  glad.c.69B9BD2C7F8C4780.idx  glad.h.E7B211B6063C8276.idx  khrplatform.h.A597CAD1CC31CF67.idx  main.cpp.031527CC52AB2A3A.idx  miniaudio.h.C59431AB304740A7.idx
src/: main.cpp
src/include/: audio.hpp  audio_capture.hpp  audio_spec.hpp  av_bridge.hpp  expr_eval.hpp  fft.hpp  fragment_header.hpp  hold_value.hpp  peak_rms.hpp  shader.hpp  shader_loader.hpp  shader_preset.hpp  smooth_value.hpp  spec.hpp  spec_parser.hpp  ssbo.hpp  texture_loader.hpp
src/shaders/feedback_test/: frag.glsl  spec.cfg
src/shaders/mel_spec/: frag.glsl  spec.cfg
src/shaders/test/: frag.glsl  spec.cfg
src/shaders/test2/: frag.glsl  spec.cfg
